[package]
name = "mlem_meter"
authors = [
    "Puk Bruinsma / DJ ZITwerK <puk@mlemrecords.com>"
    ]
homepage = "https://mlemrecords.com"
version = "0.1.1"
edition = "2021"
description = "An audio meter."
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["standalone", "vst3"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug" }
ebur128 = "0.1.10"
atomic_float = "1.1.0"
mlem_egui_themes = { path = "../mlem_egui_themes" }
mlem_base = { path = "../mlem_base" }